# LuxTTS

./: .gitignore  Makefile  README.md  pyproject.toml  server.py
ui/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/ui/: carousel.tsx  checkbox.tsx  command.tsx  context-menu.tsx  menubar.tsx  navigation-menu.tsx  sheet.tsx  sidebar.tsx  toggle.tsx
zipvoice/: luxvoice.py  modeling_utils.py
